// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Compass /> matches snapshot 1`] = `
.c0 {
  bottom: 8px;
  padding-left: 8px;
  position: -webkit-sticky;
  position: sticky;
}

<img
  className="c0"
/>
`;

exports[`<GameView /> matches snapshot 1`] = `
<styled.div>
  <canvas
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
  <styled.img
    src="/static/images/compass.svg"
  />
</styled.div>
`;

exports[`<GameView /> shows the loading screen when the game is loading 1`] = `
<styled.div>
  <styled.div>
    <WithStyles(ForwardRef(CircularProgress))
      color="inherit"
    />
    <Styled(WithStyles(ForwardRef(Typography)))
      color="inherit"
      variant="body1"
    >
      Building game world...
    </Styled(WithStyles(ForwardRef(Typography)))>
  </styled.div>
  <canvas
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</styled.div>
`;

exports[`<GameViewLayout /> matches snapshot 1`] = `
.c0 {
  grid-area: game-view;
}

<div
  className="c0"
/>
`;

exports[`<LoadingBackgroundOverlay /> matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

<div
  className="c0"
/>
`;
